2004-04-05  Jon Schewe  <jpschewe@mtu.net>

	* build.xml: Added checkstyle to build.

2004-03-21  Jon Schewe  <jpschewe@mtu.net>

	* src/resources/challenge-region-2003.xml: Removed language used (914627).

	* src/fll/xml/GenerateDB.java (generateDB): Removed numMedals from
	the system (847499).

2004-03-15  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/admin/Judges.java (generatePage): Made all forms
	have POST methods.

2004-01-22  Jon Schewe  <jpschewe@mtu.net>

	* web/scoreboard/allteams.jsp: Removed extraneous '> in allteams.jsp 

2004-01-17  Jon Schewe  <jpschewe@mtu.net>
	
	* Release version 2.4.
	
2004-01-10  Jon Schewe  <jpschewe@mtu.net>

	* web/display.jsp: Added ability to specify any URL relative to
	/fll-sw, for display on the main display.  This will allow us to
	display Fred's schedules and whatever else he comes up with.

2004-01-04  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/playoff/Playoff.java (displayPrintableBrackets):
	Changed admin brackets to show all playoff rounds and be nice for
	printing (866161).

2004-01-02  Jon Schewe  <jpschewe@mtu.net>

	* web/playoff/adminbrackets.jsp: Removed unneeded <br> from
	Bracket number display on all playoff brackets.

2003-12-28  Jon Schewe  <jpschewe@mtu.net>

	* web/scoreEntry/scoreEntry.jsp: Now one can edit scores that are
	non-consecutive, for those times when someone goes to the playoff
	brackets too soon (860145).

	* src/fll/Queries.java (isBye): Added support to score entry/edit
	page to handle editing bye runs (866851).

2003-12-27  Jon Schewe  <jpschewe@mtu.net>

	* web/playoff/remoteControlBrackets.jsp: Don't show final scores
	in playoffs (847952).

2003-12-18  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/ImportDB.java: Added check for differences before
	importing team data.

	* src/fll/web/report/FinalComputedScores.java (generateReport):
	Added tournament name to the final scores report.

2003-12-17  Jon Schewe  <jpschewe@mtu.net>
